--- a/P-Masstree/Makefile
+++ b/P-Masstree/Makefile
@@ -31,9 +31,9 @@ rdtimes:
 	mv *delete.rdtimes rdtimes/delete
 
 update_rdtimes:
-	rm -rf rdtimes
-	mkdir rdtimes || true
-	mkdir rdtimes/update || true
+	#rm -rf rdtimes
+	#mkdir rdtimes || true
+	#mkdir rdtimes/update || true
 	scp 'xiaoxiang@labos2.cs.usyd.edu.au:/mnt/sdb/xiaoxiang/RECIPE/P-Masstree/build/*update*.rdtimes' ./rdtimes/update/
 
 
